# tuya-iot-core-example

./: .gitmodules  CMakeLists.txt  README.md
cmake/: gcc-arm-none-eabi.cmake
src/platform/dummy/: mbedtls_sockets_wrapper.c  storage_wrapper.c  system_wrapper.c
